--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
     "core-js": "^3.6.5",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-mobile-detection": "^1.0.0",
+    "vue-responsive-video-background-player": "^1.1.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
